[package]
name = "bevy_xpbd_3d_thrusters"
description = "An implementation of children thrusters for bevy_xpbd_3d"
version = "0.1.0"
edition = "2021"
authors = ["actuallyhappening <actuallyhappening42@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ActuallyHappening/bevy_xpbd_3d_thrusters"
keywords = ["gamedev", "physics", "simulation", "xpbd", "bevy"]
categories = ["game-development", "science", "simulation"]
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "/examples"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug"]
debug = []

[dependencies]
bevy-inspector-egui = "0.23.2"
serde = { version = "1.0.192", features = ["derive"] }

[dependencies.bevy_xpbd_3d_parenting]
version = "0.2.2"
default-features = false

[dependencies.bevy_hanabi]
version = "0.10"
default-features = false
features = ["3d"]

[dependencies.bevy_xpbd_3d]
version = "0.4"

[dependencies.bevy]
version = "0.13"
default-features = false

[dev-dependencies]
bevy_editor_pls = "0.8.0"

[dev-dependencies.bevy]
version = "0.13"
